--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,7 +4,7 @@
 
 @layer base {
 	:root {
-		--background: 0 0% 100%;
+		--background: 0 0% 98%;
 		--foreground: 222.2 84% 4.9%;
 
 		--muted: 210 40% 96.1%;
@@ -44,6 +44,7 @@
 		--chart-5: #faba28;
 		--chart-goldenrod: HSL(43, 74%, 49%);
 		--chart-silver: #f2f1ef;
+		--chart-tip-background: hsl(0, 0%, 98%);
 	}
 
 	.dark {
@@ -83,6 +84,7 @@
 		--chart-5: #faba28;
 		--chart-goldenrod: HSL(43, 74%, 49%);
 		--chart-silver: #f2f1ef;
+		--chart-tip-background: hsl(222.2, 84%, 4.9%);
 	}
 }
 
